[tool.poetry]
name = "twitter_openapi_python"
version = "0.0.14"
description = "Twitter OpenAPI"
authors = ["fa0311 <yuki@yuki0311.com>"]
license = "proprietary" # or "AGPL-3.0-only"
readme = "README.md"
license_file = "LICENSE"
repository = "https://github.com/fa0311/twitter_openapi_python"
keywords = ["twitter", "api", "python", "scraper"]
include = ["twitter_openapi_python/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = ">=2.6"

twitter-openapi-python-generated = "0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.pyright]
reportPrivateImportUsage = false
