[tool.poetry]
name = "twitter_openapi_python_generated"
version = "0.0.9"
description = "Twitter OpenAPI"
authors = ["OpenAPI Generator Community <yuki@yuki0311.com>"]
license = "custom license or AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/fa0311/twitter_openapi_python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Twitter OpenAPI"]
include = ["twitter_openapi_python_generated/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
